appId: ${APP_ID}
name: Threads
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-13

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.otherUser = output.utils.createUser()}
- evalScript: ${output.room = output.utils.createRandomRoom(output.user.username, output.user.password)}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}
- runFlow:
    file: '../../helpers/navigate-to-room.yaml'
    env:
      ROOM: ${output.room.name}

# should have room screen
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}

# should have actions button
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            id: 'room-header'
          timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'More'
          timeout: 60000

# should have threads button
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            id: 'room-view-header-threads'
          timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'Threads'
          timeout: 60000

# should create thread
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: thread
- tapOn:
    id: 'room-view-messages'
- assertVisible:
    id: 'message-content-thread'
- longPressOn:
    id: 'message-content-thread'
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'Reply in thread'
    timeout: 60000
- tapOn:
    text: 'Reply in thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'
- extendedWaitUntil:
    visible:
      id: 'message-composer-input-thread'
    timeout: 60000
- tapOn:
    id: 'message-composer-input-thread'
- inputText: replied
- tapOn:
    id: 'message-composer-send'
- extendedWaitUntil:
    visible:
      id: 'message-content-replied'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
# should navigate to thread from button
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}
- extendedWaitUntil:
    visible:
      id: 'message-thread-button-thread'
    timeout: 60000
- tapOn:
    id: 'message-thread-button-thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'

# should toggle follow thread
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-view-header-unfollow'
      IOS_LABEL: 'Unfollow thread'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-view-header-follow'
      IOS_LABEL: 'Follow thread'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          visible:
            id: 'room-view-header-unfollow'
          timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          visible:
            text: 'Unfollow thread'
          timeout: 60000

# should send message in thread only
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          notVisible:
            text: 'Following thread'
          timeout: 10000
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: threadonly
      isThread: 'true'
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'room-view-title-thread'
          timeout: 5000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'message-composer-input-thread'
          timeout: 5000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}
- extendedWaitUntil:
    notVisible:
      id: 'message-content-threadonly'
    timeout: 5000

# should mark send to channel and show on main channel
- extendedWaitUntil:
    visible:
      id: 'message-thread-button-thread'
    timeout: 60000
- tapOn:
    id: 'message-thread-button-thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'
- tapOn:
    id: 'message-composer-input-thread'
- inputText: 'sendToChannel'
- tapOn:
    id: send-to-channel-unchecked
- tapOn:
    id: message-composer-send
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'room-view-title-thread'
          timeout: 5000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'message-composer-input-thread'
          timeout: 5000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}
- extendedWaitUntil:
    visible:
      text: '.*sendToChannel.*'
    timeout: 5000

# should navigate to thread from thread name
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: dummymessagebetweenthethread
- tapOn:
    id: 'message-thread-button-thread'
- extendedWaitUntil:
    visible:
      id: 'message-composer-input-thread'
    timeout: 60000
- tapOn:
    id: 'message-composer-input-thread'
- inputText: 'navthreadname'
- tapOn:
    id: 'message-composer-send-to-channel'
- tapOn:
    id: 'message-composer-send'
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'room-view-title-thread'
          timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'message-composer-input-thread'
          timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}
- extendedWaitUntil:
    visible:
      id: 'message-content-navthreadname'
    timeout: 60000
- tapOn:
    id: 'message-content-navthreadname'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'
- runFlow: '../../helpers/go-back.yaml'

# should navigate to thread from threads view
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-view-header-threads'
      IOS_LABEL: 'Threads'
- extendedWaitUntil:
    visible:
      id: 'thread-messages-view'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'thread-messages-view-thread'
    timeout: 60000
- tapOn:
    id: 'thread-messages-view-thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-view-messages'
    timeout: 60000

# should draft thread message
- extendedWaitUntil:
    visible:
      id: 'message-thread-button-thread'
    timeout: 60000
- tapOn:
    id: 'message-thread-button-thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'
- tapOn:
    id: 'message-composer-input-thread'
- inputText: 'draftthread'
- runFlow: '../../helpers/go-back.yaml'

- extendedWaitUntil:
    visible:
      id: 'message-thread-button-thread'
    timeout: 60000
- tapOn:
    id: 'message-thread-button-thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'
- extendedWaitUntil:
    visible:
      text: '.*draftthread.*'
    timeout: 60000
- tapOn:
    id: 'message-composer-input-thread'
- eraseText
- runFlow: '../../helpers/go-back.yaml'

- extendedWaitUntil:
    visible:
      id: 'message-thread-button-thread'
    timeout: 60000
- tapOn:
    id: 'message-thread-button-thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread'
- extendedWaitUntil:
    notVisible:
      text: '.*draftthread.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: '.*Add thread reply.*'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    when:
      platform: android
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'room-view-title-thread'
          timeout: 60000
- runFlow:
    when:
      platform: iOS
    commands:
      - extendedWaitUntil:
          notVisible:
            id: 'message-composer-input-thread'
          timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}

# should create thread delete the message and the thread show the correct number of messages
- runFlow:
    file: '../../helpers/send-message.yaml'
    env:
      message: 'thread-message-count'
- extendedWaitUntil:
    visible:
      id: 'message-content-thread-message-count'
    timeout: 60000
- longPressOn:
    id: 'message-content-thread-message-count'
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- extendedWaitUntil:
    visible:
      text: 'Reply in thread'
    timeout: 60000
- tapOn:
    text: 'Reply in thread'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: 'thread-message-count'
- extendedWaitUntil:
    visible:
      id: 'message-composer-input-thread'
    timeout: 60000
- retry:
    maxRetries: 2
    commands:
      - tapOn:
          id: 'message-composer-input-thread'
      - eraseText
      - inputText: 'replied'
      - extendedWaitUntil:
          visible:
            text: 'replied'
          timeout: 10000
- extendedWaitUntil:
    visible:
      id: 'message-composer-send'
    timeout: 60000
- tapOn:
    id: 'message-composer-send'
- extendedWaitUntil:
    visible:
      id: 'message-content-replied'
    timeout: 60000
- longPressOn:
    id: 'message-content-replied'
- extendedWaitUntil:
    visible:
      id: 'action-sheet'
    timeout: 60000
- swipe:
    from:
      id: 'action-sheet-handle'
    direction: UP
- scrollUntilVisible:
    element:
      text: 'Delete'
    timeout: 60000
- tapOn:
    text: 'Delete'
- extendedWaitUntil:
    visible:
      text: '.*You will not be able to recover this message.*'
    timeout: 60000
- tapOn: 'DELETE'
- runFlow: '../../helpers/go-back.yaml'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.room.name}
- extendedWaitUntil:
    visible:
      id: 'thread-count-0'
    timeout: 60000
