appId: ${APP_ID}
name: Unread badge
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-13
  - android-only

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.otherUser = output.utils.createUser()}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# Should have normal unread indicator on normal message
- evalScript: ${output.message = output.utils.sendMessage(output.otherUser.username, output.otherUser.password, '@' + output.user.username, 'message-mark-as-unread')}
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: 'unread-badge-1'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'rooms-list-view-item-${output.otherUser.username}'
- runFlow: '../../helpers/go-back.yaml'
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    notVisible:
      id: 'unread-badge-1'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000

# Should have mention unread indicator on mentioned message
- evalScript: ${output.message = output.utils.sendMessage(output.otherUser.username, output.otherUser.password, '@' + output.user.username, '@' + output.user.username)}
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: 'mention-badge-1'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'rooms-list-view-item-${output.otherUser.username}'
- runFlow: '../../helpers/go-back.yaml'
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    notVisible:
      id: 'mention-badge-1'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000

# send normal message first and mention in next message and it should show mentioned unread indicator
- evalScript: ${output.message = output.utils.sendMessage(output.otherUser.username, output.otherUser.password, '@' + output.user.username, 'message-mark-as-unread')}
- evalScript: ${output.message = output.utils.sendMessage(output.otherUser.username, output.otherUser.password, '@' + output.user.username, '@' + output.user.username)}
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: 'mention-badge-2'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'rooms-list-view-item-${output.otherUser.username}'
- runFlow: '../../helpers/go-back.yaml'
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    notVisible:
      id: 'mention-badge-2'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000

# send mention message first and normal message in next message and it should show mentioned unread indicator
- evalScript: ${output.message = output.utils.sendMessage(output.otherUser.username, output.otherUser.password, '@' + output.user.username, '@' + output.user.username)}
- evalScript: ${output.message = output.utils.sendMessage(output.otherUser.username, output.otherUser.password, '@' + output.user.username, 'message-mark-as-unread')}
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- waitForAnimationToEnd:
    timeout: 10000
- extendedWaitUntil:
    visible:
      id: 'mention-badge-2'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
- tapOn:
    id: 'rooms-list-view-item-${output.otherUser.username}'
- runFlow: '../../helpers/go-back.yaml'
- waitForAnimationToEnd:
    timeout: 5000
- extendedWaitUntil:
    notVisible:
      id: 'mention-badge-2'
      childOf:
        id: 'rooms-list-view-item-${output.otherUser.username}'
    timeout: 60000
