appId: ${APP_ID}
name: Clear Cache
tags:
  - 'util'

---
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow: '../../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- runFlow:
    file: '../../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-sidebar'
      IOS_LABEL: 'Menu'
- waitForAnimationToEnd:
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'sidebar-settings'
    timeout: 60000
- tapOn:
    id: 'sidebar-settings'
- waitForAnimationToEnd:
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'settings-view-clear-cache'
    timeout: 60000
- tapOn:
    id: 'settings-view-clear-cache'
    retryTapIfNoChange: true
- extendedWaitUntil:
    visible:
      text: '.*This will clear all your offline data.*'
    timeout: 60000
- tapOn:
    text: 'Clear'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
