appId: ${APP_ID}
name: Navigate to info view
tags:
  - 'util'

---
- runFlow: '../../../helpers/open-room-actions.yaml'
- assertVisible:
    id: room-actions-info
- tapOn:
    id: room-actions-info
- extendedWaitUntil:
    visible:
      id: room-info-view
    timeout: 60000
