appId: ${APP_ID}
name: Check Server
tags:
  - 'util'

---
- runFlow:
    file: '../../../helpers/search-and-navigate-room.yaml'
    env:
      ROOM: ${ROOM}
- runFlow: '../../../helpers/open-room-actions.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-info'
    timeout: 60000
- tapOn:
    id: 'room-actions-info'
- extendedWaitUntil:
    visible:
      id: 'room-info-view'
    timeout: 60000
