appId: ${APP_ID}
name: Convert Team
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-4

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.toBeConverted = 'to-be-converted-' + output.random()}
- evalScript: ${output.toBeMoved = 'to-be-moved-' + output.random()}
- evalScript: ${output.publicChannelToBeConverted = 'channel-public-to-be-converted-' + output.random()}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

# should convert public channel to a team
- runFlow:
    file: './utils/create-channel.yaml'
    env:
      channelName: ${output.publicChannelToBeConverted}
      publicChannel: true
- runFlow:
    file: '../../helpers/navigate-to-room-action.yaml'
    env:
      ROOM: ${output.publicChannelToBeConverted}
- scrollUntilVisible:
    element:
      id: 'room-actions-convert-to-team'
- tapOn:
    id: 'room-actions-convert-to-team'
- extendedWaitUntil:
    visible:
      text: '.*You are converting this channel to a team. All members will be kept.*'
    timeout: 60000
- assertVisible:
    text: 'Convert'
- tapOn:
    text: 'Convert'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.publicChannelToBeConverted}
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000

# should convert private channel to a team
- runFlow:
    file: './utils/create-channel.yaml'
    env:
      channelName: ${output.toBeConverted}
- runFlow:
    file: '../../helpers/navigate-to-room-action.yaml'
    env:
      ROOM: ${output.toBeConverted}
- scrollUntilVisible:
    element:
      id: 'room-actions-convert-to-team'
- tapOn:
    id: 'room-actions-convert-to-team'
- extendedWaitUntil:
    visible:
      text: '.*You are converting this channel to a team. All members will be kept.*'
    timeout: 60000
- assertVisible:
    text: 'Convert'
- tapOn:
    text: 'Convert'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.toBeConverted}
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000

# should move channel to a team
- runFlow:
    file: './utils/create-channel.yaml'
    env:
      channelName: ${output.toBeMoved}
- runFlow:
    file: '../../helpers/navigate-to-room-action.yaml'
    env:
      ROOM: ${output.toBeMoved}
- scrollUntilVisible:
    element:
      id: 'room-actions-move-to-team'
- tapOn:
    id: room-actions-move-to-team
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'select-list-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      id: 'select-list-view-item-${output.toBeConverted}'
    timeout: 60000
- tapOn:
    id: 'select-list-view-item-${output.toBeConverted}'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'select-list-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      text: '.*After reading the previous instructions about this behavior, do you still want to move this channel to the selected team?.*'
    timeout: 60000
- assertVisible:
    text: 'Yes, move it!'
- tapOn:
    text: 'Yes, move it!'
- runFlow: '../../helpers/open-room-actions.yaml'
- extendedWaitUntil:
    visible:
      id: 'room-actions-teams'
    timeout: 60000
- runFlow: '../../helpers/go-back.yaml'
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000

# should convert a team to a channel
- runFlow:
    file: '../../helpers/navigate-to-room-action.yaml'
    env:
      ROOM: ${output.toBeConverted}
- scrollUntilVisible:
    element:
      text: 'Convert to channel'
- tapOn: 'Convert to channel'
- extendedWaitUntil:
    visible:
      text: '.*Converting team to channel.*'
    timeout: 60000
- extendedWaitUntil:
    visible:
      id: 'select-list-view-item-${output.toBeMoved}'
    timeout: 60000
- tapOn:
    id: 'select-list-view-item-${output.toBeMoved}'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'select-list-view-submit'
      IOS_LABEL: 'Next'
- extendedWaitUntil:
    visible:
      text: '.*You are converting this team to a channel.*'
    timeout: 60000
- assertVisible:
    text: 'Convert'
- tapOn:
    text: 'Convert'
- extendedWaitUntil:
    visible:
      id: 'room-view'
    timeout: 60000
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.toBeConverted}
- runFlow: '../../helpers/go-back.yaml'
- extendedWaitUntil:
    visible:
      id: 'rooms-list-view'
    timeout: 60000
- extendedWaitUntil:
    notVisible:
      id: 'rooms-list-view-item-${output.toBeMoved}'
    timeout: 60000
