appId: ${APP_ID}
name: Create Team and Delete
onFlowStart:
  - runFlow: '../../helpers/setup.yaml'
onFlowComplete:
  - evalScript: ${output.utils.deleteCreatedUsers()}
tags:
  - test-4

---
- evalScript: ${output.user = output.utils.createUser()}
- evalScript: ${output.teamname = output.randomTeamName()}

- runFlow:
    file: '../../helpers/login-with-deeplink.yaml'
    env:
      USERNAME: ${output.user.username}
      PASSWORD: ${output.user.password}

- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'rooms-list-view-create-channel'
      IOS_LABEL: 'Create new channel, team, direct message or discussion'
- assertVisible:
    id: 'new-message-view-create-team'
- tapOn:
    id: 'new-message-view-create-team'
- assertVisible:
    id: 'select-users-view'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'selected-users-view-submit'
      IOS_LABEL: 'Skip'
- assertVisible:
    id: 'create-channel-view'
- tapOn:
    id: 'create-channel-name'
- inputText: ${output.teamname}
- pressKey: enter
- tapOn:
    id: 'create-channel-submit'
- assertVisible:
    id: 'room-view-messages'
- runFlow:
    file: '../../helpers/assert-room-title.yaml'
    env:
      ROOM: ${output.teamname}
- runFlow: '../../helpers/open-room-actions.yaml'
- assertVisible:
    id: 'room-actions-info'
- tapOn:
    id: 'room-actions-info'
- runFlow:
    file: '../../helpers/tap-header-item.yaml'
    env:
      ANDROID_ID: 'room-info-view-edit-button'
      IOS_LABEL: 'Room info edit'
- scrollUntilVisible:
    element:
      id: 'room-info-edit-view-delete'
- tapOn:
    id: 'room-info-edit-view-delete'
- assertVisible: 'YES, DELETE IT!'
- tapOn: 'YES, DELETE IT!'
- extendedWaitUntil:
    notVisible:
      id: rooms-list-view-item-${output.teamname}
    timeout: 60000
